tests/invalid/bytes_unsupported_type/main.py
x: bool = True
y: bytes = bytes(x)
